# piperx-graspnet-project

./: .gitignore  01_需求与技术方案.md  README.md  pyproject.toml  vision_ai_grasping_requirements_completed.md
configs/: calibration.yaml  camera.yaml  graspnet.yaml  pose_bridge.yaml  robot.yaml  ros2_moveit.yaml
ros2_ws/: README.md
ros2_ws/src/piperx_moveit_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/piperx_moveit_bridge/piperx_moveit_bridge/: plan_from_json.py
scripts/: 00_check_can.py  01_check_robot_state.py  02_test_motion.py  03_test_gripper.py  04_capture_rgbd.py  05_run_graspnet_once.py  06_pick_once.py  07_prepare_moveit_plan.py  08_run_pose_bridge.py  09_test_pose_bridge_client.py
src/piperx_grasp/: config.py  interfaces.py  main.py
src/piperx_grasp/bridge/: __init__.py  pose_bridge_client.py
src/piperx_grasp/calibration/: __init__.py  hand_eye.py  transforms.py
src/piperx_grasp/camera/: __init__.py  filters.py  pointcloud.py  rgbd_camera.py
src/piperx_grasp/grasp/: __init__.py  grasp_selector.py  grasp_types.py  graspnet_runner.py
src/piperx_grasp/pipeline/: execute_grasp.py  perceive.py  plan_grasp.py
src/piperx_grasp/planning/: __init__.py  moveit_contract.py
src/piperx_grasp/robot/: __init__.py  gripper.py  motion_planner.py  piperx_client.py  safety.py
src/piperx_grasp/utils/: geometry.py
tests/: test_grasp_selection.py  test_motion_limits.py  test_moveit_contract.py  test_pose_bridge.py  test_transforms.py
