[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piperx-graspnet-project"
version = "0.1.0"
description = "PiperX GraspNet grasp execution scaffold"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6.0",
    "python-can>=3.3.4",
    "pyAgxArm>=1.0.0,<1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
